# ESP32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  tcp_eth.c  teste_mqtt.cpp
